--- a/_site.yml
+++ b/_site.yml
@@ -14,6 +14,9 @@ navbar:
       href: index.html
     - text: "About"
       href: about.html
+    - text: "Teaching"
+      href: teaching.html
+
 output: 
   distill::distill_article:
     css: style.css
