--- a/_site.yml
+++ b/_site.yml
@@ -12,10 +12,12 @@ navbar:
   right:
     - text: "Home"
       href: index.html
-    - text: "About"
-      href: about.html
     - text: "Teaching"
       href: teaching.html
+    - text: "Books"
+      href: books.html
+    - text: "About"
+      href: about.html
 
 output: 
   distill::distill_article:
