--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,7 +13,7 @@ website:
         href: https://twitter.com/t_hlb
 format:
   html:
-    theme: spacelab
+    theme: simplex
     css: styles.css
 
 editor: visual
